--- a/.github/workflows/prod-build-deploy.yml
+++ b/.github/workflows/prod-build-deploy.yml
@@ -52,7 +52,7 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@479e82243a95585ebee8ab037c4bfd8e6356a47b
+        uses: paper-spa/deploy-pages@main
 
       - name: Announce deployment
         run: echo "Deployed to ${{ steps.deployment.outputs.page_url }}"
